prototypes/v1/tests/elab/ok/fun_lit/check_fun_lit.pion
def fun0: () -> Int = fun() => 0;

def fun1: Int -> Bool = fun(x) => false;
