prototypes/v1/tests/elab/errors/pattern_matching/inexhaustive_let.pion
def foo = fun(x: Bool) => let false = x; x;
